# src/routes/v1/public.routes.ts
@@ -1,0 +1,5 @@
+import { Router } from "express";
+import { listPublicPlans } from "../../controllers/plan.controller";
+
+export const publicRoutes = Router();
+publicRoutes.get("/plans", listPublicPlans);
